Update position template functionality

--- a/client/src/app/pages/positions/create-position/create-position.component.scss
+++ b/client/src/app/pages/positions/create-position/create-position.component.scss
@@ -351,6 +351,10 @@ p {
         .btn-section {
           padding: 40px 0;
           text-align: center;
+          @include flex(column, normal, flex-start);
+          action-button {
+            margin-bottom: 10px;
+          }
         }
         
       }
