--- a/client/src/app/components/interest-level-popup/interest-level-popup.component.html
+++ b/client/src/app/components/interest-level-popup/interest-level-popup.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-box">
-  <p> If you want to set the interest for the other position to zero while making the selected one.</p>
+  <p> Do you want to set the interest for the other position to zero while making the selected one {{interestLevelData.level}}.</p>
 
   <div class="application-btn-center">
     <action-button class="application-no-thanks-btn " type="flat" title="No Thanks" color="warning" (click)="onNoClick()">
