--- a/client/src/app/components/skill-description-popup/skill-description-popup.component.html
+++ b/client/src/app/components/skill-description-popup/skill-description-popup.component.html
@@ -16,5 +16,5 @@
 
 <div *ngIf="data.dialogFlag">
     <mat-icon class="cancel" (click)="onClose()">cancel</mat-icon>
-          <h3>This indicates how interested a candidate is in a given position.</h3>
+          <p>This indicates how interested a candidate is in a given position.</p>
   </div>
