--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -225,6 +225,8 @@ $container-max-width: 1365px;
 
 $mat-form-bg-color: #ecf3fc;
 $secondary-bg-color: #f5f8fa;
+$secondary-bg-color-btn:#eefbf2;
+$secondary-bg-color-reject-btn:#fde2e2;
 $third-bg-color: #f4f5f8;
 $bg-color-1: #f2f2f4;
 $bg-color-2: #f2f3f7;
