UI and functionality bugs fixes

--- a/client/src/app/components/interest-level-popup/interest-level-popup.component.html
+++ b/client/src/app/components/interest-level-popup/interest-level-popup.component.html
@@ -1,11 +1,13 @@
 <div class="dialog-box">
-  <p> Do you want to set the interest for the other position to zero while making the selected one {{interestLevelData.level}}.</p>
+  <p> You already appear to have an application with this specified interest level. Would you like to set the interest
+    for the other position to 0 and the selected one to {{interestLevelData.level}}.</p>
 
   <div class="application-btn-center">
-    <action-button class="application-no-thanks-btn " type="flat" title="No Thanks" color="warning" (click)="onNoClick()">
+    <action-button class="application-no-thanks-btn " type="flat" title="No Thanks" color="warning"
+      (click)="onNoClick()">
     </action-button>
-    <action-button class=" application-submit-btn" type="flat" title="Ok" color="primary" (click)="changeInterestLevel()">
+    <action-button class=" application-submit-btn" type="flat" title="OK" color="primary"
+      (click)="changeInterestLevel()">
     </action-button>
   </div>
 </div>
-
